--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# Ignore local docker-compose file
+/docker-compose.yml
+
 # Ignore local config files
 /config/databases.yml
